--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ MINIO_BUCKET=contract-precheck
 MINIO_USE_SSL=false
 
 # LLM Provider (local or zhipu)
-LLM_PROVIDER=local
+LLM_PROVIDER=zhipu
 
 # Local vLLM Configuration (when LLM_PROVIDER=local)
 VLLM_API_KEY=token-local
@@ -22,7 +22,7 @@ VLLM_EMBED_BASE_URL=http://localhost:8001/v1
 VLLM_RERANK_BASE_URL=http://localhost:8002/v1
 
 # Zhipu Qingyan Configuration (when LLM_PROVIDER=zhipu)
-ZHIPU_API_KEY=your-zhipu-api-key-here
+ZHIPU_API_KEY=82a950e849ce49329afd6937d7293345.oSdTFzzCTthADgOO
 ZHIPU_CHAT_BASE_URL=https://open.bigmodel.cn/api/paas/v4
 ZHIPU_EMBED_BASE_URL=https://open.bigmodel.cn/api/paas/v4
 ZHIPU_RERANK_BASE_URL=https://open.bigmodel.cn/api/paas/v4
