--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
     "docker:up": "docker compose up -d",
+    "docker:up:zhipu": "docker compose -f docker-compose.zhipu.yml up -d",
     "docker:down": "docker compose down",
     "docker:logs": "docker compose logs -f",
     "db:migrate": "npm run db:migrate --workspace=server",
