--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,8 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "test": "node --experimental-test-module --test src/tests/**/*.test.ts",
-    "test:load": "node --experimental-test-module --test src/tests/load.test.ts",
+    "test": "tsx --test src/tests/**/*.test.ts",
+    "test:load": "tsx --test src/tests/load.test.ts",
     "benchmark": "tsx ../scripts/benchmark.ts",
     "db:migrate": "tsx src/db/migrate.ts"
   },
@@ -20,21 +20,23 @@
     "@types/pg": "^8.11.0",
     "bcrypt": "^5.1.1",
     "bullmq": "^5.7.1",
+    "dotenv": "^17.2.3",
     "fastify": "^4.26.0",
     "ioredis": "^5.3.2",
     "mammoth": "^1.6.0",
     "minio": "^7.1.3",
     "node-pg-migrate": "^7.5.1",
-    "pino": "^8.19.0",
-    "pino-pretty": "^11.0.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "pgvector": "^0.2.0",
+    "pino": "^8.19.0",
+    "pino-pretty": "^11.0.0",
     "postgres": "^3.4.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^6.1.1",
     "@types/node": "^20.11.16",
     "@types/pdf-parse": "^1.1.4",
     "tsx": "^4.7.0",
