--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
+    "recharts": "^3.6.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
