--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "./dev-server.sh",
     "build": "tsc",
     "start": "node dist/server.js",
     "test": "tsx --test src/tests/**/*.test.ts",
